# Django-React-Chat

./: .gitignore  manage.py  pyproject.toml
ChatnGo/: admin.py  apps.py  consumers.py  routing.py  serializers.py  urls.py  views.py
ChatnGo/api/: urls.py  views.py
ChatnGo/management/commands/: crspusr.py  fake_db_data.py
ChatnGo/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py  0003_alter_userprofile_photo.py
ChatnGo/models/: __init__.py  base.py  mg_message.py  models.py
ChatnGo/models/profile/: user_profile.py
ChatnGo/views/: auth_views.py  views.py
DjangoChat/: asgi.py  routing.py  settings.py  testscript.py  urls.py
chatngo-frontend/: package-lock.json  package.json
chatngo-frontend/public/: index.html
chatngo-frontend/src/: App.js  index.js
chatngo-frontend/src/components/: Chat.js  ChatList.js  ChatRoom.js  ChatRoomList.js  Login.js  Message.js  SendMessage.js
chatngo-frontend/src/components/style/: ChatList.module.css  ChatRoom.module.css  ChatRoomList.module.css  Login.module.css  Message.module.css  SendMessage.module.css
chatngo-frontend/src/deprecated_components/: Chat.js
chatngo-frontend/src/services/: APIService.js  ChatWebSocket.js  ChatngoWebSocket.js  api.js
management/commands/: create_oauth_app.py  fake_db_data.py
