[tool.poetry]
name = "djangochat"
version = "0.1.0"
description = ""
authors = ["EgorLenko <yehorlenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
djongo = "^1.3.6"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.0.0"
django-cors-headers = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint-django = "^2.5.3"
faker = "^18.3.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
